# mlops-credit-default-platform

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  Jenkinsfile  Makefile  README.md  WALKTHROUGH.md  dvc.yaml  params.yaml  pitch-adobe.md  pyproject.toml  resume-adobe.md  resume.md  tiger-prep.md
.github/workflows/: build-deploy.yml  ci.yml  train.yml
airflow/: README.md  requirements.txt
airflow/dags/: credit_default_retrain.py
data/policies/: 01-credit-policy.md  02-fair-lending.md  03-adverse-action.md  04-data-rights.md  05-review-band.md
data/policies/.faiss/: index.faiss
docker/: Dockerfile.api  docker-compose.yml
docs/: architecture.md  problem-statement.md
docs/adr/: 0001-architecture-snapshot.md
infra/: .terraform.lock.hcl  README.md  backend.tf  cloudwatch.tf  ecr.tf  eks.tf  iam.tf  lambda.tf  locals.tf  outputs.tf  s3.tf  sagemaker.tf  variables.tf  versions.tf  vpc.tf
infra/bootstrap/: README.md  main.tf
infra/envs/: prod.tfvars  staging.tfvars
infra/lambda/: scorer.py
k8s/: README.md  argocd-application.yaml
k8s/helm/credit-default-api/: .helmignore  Chart.yaml  values-prod.yaml  values.yaml
k8s/helm/credit-default-api/templates/: NOTES.txt  _helpers.tpl  (+12 more)
monitoring/: README.md
monitoring/alertmanager/: config.example.yaml
monitoring/grafana/dashboards/: credit-default-ml.json  credit-default-sre.json
monitoring/prometheus/: rules.yaml
pipelines/step-functions/: retrain.asl.json
reports/: metrics.json  optuna_study.csv  reweighing_summary.csv  validation.json
src/: utils.py
src/data/: ingest.py  schemas.py  validate.py
src/features/: build.py
src/llm/: cli.py  corpus.py  explainer.py  vectorstore.py
src/models/: evaluate.py  explain.py  fairness.py  register.py  reweighing.py  train.py
src/monitoring/: baseline.py  drift.py
src/serving/: app.py  inference.py  metrics.py  schemas.py
tests/integration/: conftest.py  test_api.py
tests/unit/: test_drift_summary.py  test_features.py  test_llm_explainer.py  test_register_gates.py  test_reweighing.py  test_schemas.py
