[project]
name = "loan-default-platform"
version = "0.1.0"
description = "End-to-end MLOps platform for loan default risk prediction"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Jayaram" }]

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "lightgbm>=4.5",
    "optuna>=3.6",
    "mlflow>=2.17",
    "dvc[s3]>=3.53",
    "pandera[pandas]>=0.20",
    "ucimlrepo>=0.0.7",
    "fairlearn>=0.10",
    "shap>=0.46",
    "matplotlib>=3.9",
    "pyarrow>=17",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "joblib>=1.4",
]

[project.optional-dependencies]
serving = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "prometheus-client>=0.20",
    "httpx>=0.27",
]
llm = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=0.2",
    "faiss-cpu>=1.8",
    "sentence-transformers>=3.0",
    "tiktoken>=0.7",
]
monitoring = [
    "evidently>=0.4",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "nbstripout>=0.7",
    "ipykernel>=6.29",
    "locust>=2.31",
    "bandit>=1.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing"
markers = [
    "unit: unit tests",
    "integration: integration tests requiring services",
    "slow: tests that take >5s",
]
